--- a/Veris/resources/fxml/textViewer.fxml
+++ b/Veris/resources/fxml/textViewer.fxml
@@ -8,61 +8,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="652.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verisjudge.ui.ResultsController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verisjudge.ui.TextViewerController">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
-   <bottom>
-      <GridPane hgap="10.0" style="-fx-background-color: #EEEEEE; -fx-border-width: 1; -fx-border-color: #AAAAAA;" vgap="10.0" BorderPane.alignment="CENTER">
-         <columnConstraints>
-            <ColumnConstraints hgrow="NEVER" minWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <Label text="Worst time:">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label text="Total time:" GridPane.rowIndex="1">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label text="Verdict:" GridPane.rowIndex="2">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelWorstTime" text="0.19 s" GridPane.columnIndex="1">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelTotalTime" text="20.54 s" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelVerdict" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-         </children>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-         <BorderPane.margin>
-            <Insets top="10.0" />
-         </BorderPane.margin>
-      </GridPane>
-   </bottom>
    <top>
       <GridPane vgap="10.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -70,8 +19,6 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label fx:id="labelMainTitle" GridPane.halignment="CENTER">
@@ -79,27 +26,17 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label fx:id="labelCompilingCode" GridPane.rowIndex="1">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelRunningTestCases" GridPane.rowIndex="2">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
          </children>
       </GridPane>
    </top>
    <center>
-      <ScrollPane fitToWidth="true" focusTraversable="false" hbarPolicy="NEVER" prefViewportWidth="630.0" style="-fx-focus-color: transparent; -fx-faint-focus-color: transparent;" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+      <ScrollPane fitToWidth="true" fitToHeight="true" focusTraversable="false" hbarPolicy="NEVER" style="-fx-focus-color: transparent; -fx-faint-focus-color: transparent;" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
          <content>
-            <FlowPane fx:id="flowPaneTestCases" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" style="-fx-focus-color: transparent;" GridPane.rowIndex="3" />
+         	<TextArea fx:id="mainTextArea" editable="false" focusTraversable="false" wrapText="true" maxWidth="1.7976931348623157E308" maxHeight="1.7976931348623157E308" style="-fx-focus-color: transparent;" />
          </content>
          <BorderPane.margin>
             <Insets top="10.0" />
          </BorderPane.margin>
       </ScrollPane>
    </center>
-      </BorderPane>
+</BorderPane>
