--- a/Veris/resources/fxml/textViewer.fxml
+++ b/Veris/resources/fxml/textViewer.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verisjudge.ui.TextViewerController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verisjudge.ui.TextViewerController" stylesheets="@../css/styles.css">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
@@ -30,9 +30,9 @@
       </GridPane>
    </top>
    <center>
-      <ScrollPane fitToWidth="true" fitToHeight="true" focusTraversable="false" hbarPolicy="NEVER" style="-fx-focus-color: transparent; -fx-faint-focus-color: transparent;" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+      <ScrollPane fitToWidth="true" fitToHeight="true" focusTraversable="false" hbarPolicy="NEVER" style="-fx-focus-color: transparent; -fx-faint-focus-color: transparent; -fx-font-family: monospace;" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
          <content>
-         	<TextArea fx:id="mainTextArea" editable="false" focusTraversable="false" wrapText="true" maxWidth="1.7976931348623157E308" maxHeight="1.7976931348623157E308" style="-fx-focus-color: transparent;" />
+         	<TextArea fx:id="mainTextArea" editable="false" focusTraversable="false" wrapText="true" maxWidth="1.7976931348623157E308" maxHeight="1.7976931348623157E308" style="-fx-focus-color: transparent;"/>	
          </content>
          <BorderPane.margin>
             <Insets top="10.0" />
