--- a/Veris/resources/fxml/settings.fxml
+++ b/Veris/resources/fxml/settings.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verisjudge.ui.SettingsController" stylesheets="@../css/styles.css">
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verisjudge.ui.SettingsController">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
@@ -22,17 +22,22 @@
    <center>
       <FlowPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <CheckBox fx:id="checkBoxUseDarkTheme" mnemonicParsing="false" text="Use Dark Theme">
+            <CheckBox fx:id="checkBoxUseDarkTheme" mnemonicParsing="false" text="Use dark theme">
                <font>
                   <Font size="16.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="checkBoxRememberJudgingSettings" mnemonicParsing="false" text="Save Judging Settings">
+            <CheckBox fx:id="checkBoxRememberJudgingSettings" mnemonicParsing="false" text="Save judging settings">
                <font>
                   <Font size="16.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="checkBoxSortCasesBySize" mnemonicParsing="false" text="Sort Cases by Size">
+            <CheckBox fx:id="checkBoxSortCasesBySize" mnemonicParsing="false" text="Run largest cases first">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </CheckBox>
+            <CheckBox fx:id="checkBoxStopAtFirstNonCorrectVerdict" mnemonicParsing="false" text="Stop at first non-correct verdict">
                <font>
                   <Font size="16.0" />
                </font>
