--- a/Veris/resources/fxml/testCaseResult.fxml
+++ b/Veris/resources/fxml/testCaseResult.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane alignment="CENTER_RIGHT" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@../css/styles.css">
+<StackPane alignment="CENTER_RIGHT" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="imageViewTestCase" fitWidth="63.0" pickOnBounds="true" preserveRatio="true">
          <image>
