--- a/Veris/resources/css/styles.css
+++ b/Veris/resources/css/styles.css
@@ -3,3 +3,8 @@
 	-fx-border-color: -fx-box-border;
 	-fx-border-width: 1;
 }
+
+.text-field.error {
+  -fx-text-box-border: red;
+  -fx-focus-color: red;
+}
