--- a/Veris/resources/fxml/main.fxml
+++ b/Veris/resources/fxml/main.fxml
@@ -27,7 +27,7 @@
             <RowConstraints fillHeight="false" valignment="TOP" />
          </rowConstraints>
          <children>
-                  <GridPane hgap="5.0" BorderPane.alignment="CENTER">
+                  <GridPane hgap="5.0" vgap="5.0" BorderPane.alignment="CENTER">
                      <columnConstraints>
                         <ColumnConstraints hgrow="NEVER" maxWidth="214.0" minWidth="10.0" />
                         <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="192.0" minWidth="10.0" prefWidth="162.0" />
