--- a/Veris/resources/fxml/configEditor.fxml
+++ b/Veris/resources/fxml/configEditor.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -140,9 +141,16 @@
                   </GridPane>
                </content>
             </TitledPane>
-            <TitledPane alignment="TOP_LEFT" animated="false" contentDisplay="CENTER" expanded="false" text="Language Specs">
+            <TitledPane alignment="TOP_LEFT" animated="false" contentDisplay="CENTER" expanded="false" maxHeight="1.7976931348623157E308" text="Language Specs">
                <content>
-                  <VBox fx:id="vBoxLanguageSpecs" />
+                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="200.0">
+                     <content>
+                        <VBox fx:id="vBoxLanguageSpecs" maxHeight="1.7976931348623157E308" spacing="10.0" />
+                     </content>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </ScrollPane>
                </content>
             </TitledPane>
          </panes>
