--- a/Veris/resources/fxml/configEditor.fxml
+++ b/Veris/resources/fxml/configEditor.fxml
@@ -145,7 +145,32 @@
                <content>
                   <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="200.0">
                      <content>
-                        <VBox fx:id="vBoxLanguageSpecs" maxHeight="1.7976931348623157E308" spacing="10.0" />
+                        <VBox fx:id="vBoxLanguageSpecs" maxHeight="1.7976931348623157E308" spacing="10.0">
+                           <children>
+                              <GridPane styleClass="box-with-border">
+                                <columnConstraints>
+                                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </padding>
+                                 <children>
+                                    <Button mnemonicParsing="false" onAction="#handleAddNewLanguageSpecButtonAction" text="Add New Language Spec">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </GridPane>
+                           </children>
+                        </VBox>
                      </content>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
